# lqr

./: .gitignore  config.py  dynamics.py  main.py  pyproject.toml
output/: states.csv
src/lqr_pkg/: data_animator.py  data_plotter.py  data_processor.py  main.py
