[project]
name = "lqr"
version = "0.1.0"
description = "LQR project"
authors = [
    {name = "Max"}
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "control",
    "tqdm"
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
